--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
 </div>
 
 
-<script src="http://code.jquery.com/jquery.js"></script>
+<script src="https://code.jquery.com/jquery.js"></script>
 <script src="{{ url_for('static', filename='jsstuff.js') }}"></script>
 
 </body>
