--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
   <nav id = 'hnav'>
-    <a href = '#' class = 'navitems'> Ball </a>
+    <!-- <a href = '#' class = 'navitems'> Ball </a> -->
+
     <a href = '#' class = 'navitems'> Blog </a>
     <a href = '#' class = 'navitems'> Projects </a>
     <!-- <a href = '#' class = 'navitems'> Stats </a> -->
@@ -27,7 +28,8 @@
       <div>
         <p class = 'specialp'> Use the reddit bot </p>
         <form action = '/redditbot' method = 'POST'>
-          <input type = 'text' name = 'first'>
+          <input type = 'text' name = 'subkey'>
+          <input type = 'text' name = 'redditkeyword'>
           <input type = 'submit' name = 'info'>
         </form>
       </div>
