--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,7 @@
         <form action = '/twitterbot' method = 'POST'>
           <input type = 'text' name = 'keyword1'>
           <input type = 'text' name = 'keyword2'>
+          <input type = 'text' name = 'user_tweet'>
           <input type = 'submit' name = 'oi'>
         </form>
       </div>
